# cookiecutter-python-async-grpc

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}-service/: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  tox.ini
{{cookiecutter.project_name}}-service/proto/{{cookiecutter.project_name}}/protobuf/healthcheck/: healthcheck.proto
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/: __init__.py  __main__.py  registry.py  settings.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/conf/: __init__.py  global_settings.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/core/: grpc.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/core/handlers/: grpc.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/core/management/: __init__.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/core/management/commands/: __init__.py  build.py  loaddata.py  runserver.py  shell.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/db/: __init__.py  engines.py  sessions.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/db/models/: __init__.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/interceptors/: __init__.py  logging.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/migrations/: env.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/processors/: __init__.py  healthcheck.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/protobuf/: .gitignore
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/repositories/: __init__.py  healthcheck.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/services/: __init__.py  healthcheck.py
{{cookiecutter.project_name}}-service/src/{{cookiecutter.project_name}}/utils/: timezone.py
